--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
         </activity>
 
         <activity
+            android:name=".activities.GametypeActivity" >
+        </activity>
+
+        <activity
             android:name=".activities.HomeActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
