--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppThemeHome" >
 
-        <activity
-            android:name=".activities.QuestionActivity" >
-        </activity>
 
         <activity
-            android:name=".activities.GametypeActivity" >
+            android:name=".activities.QuestionActivity" >
         </activity>
 
         <activity
@@ -29,6 +26,11 @@
         <activity
             android:name=".activities.ScoreActivity" >
         </activity>
+
+        <activity
+            android:name=".activities.GameLobbyActivity" >
+        </activity>
+
 
     </application>
 
