fake friend list, timer question à 12s, tous les médias sélectionnés par défaut

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,10 @@
             android:name=".activities.GameLobbyActivity" >
         </activity>
 
+        <activity
+            android:name=".activities.FriendActivity" >
+        </activity>
+
 
     </application>
 
